# gpu-monitor

./: .env.example  .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  config.yaml  docker-compose.monitoring.yml  docker-compose.yml  gpu-monitor.service  gpu_monitor.py  pyproject.toml  requirements.txt  start.sh
.github/workflows/: ci.yml
docs/: index.html
docs/data/: index.json
gpuwatch.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
grafana/: alertmanager.yml  alerts.yml  dashboard.json  prometheus.yml
grafana/grafana-provisioning/dashboards/: gpu-monitor.yml
kubernetes/: daemonset.yaml  kustomization.yaml  namespace.yaml  secret.yaml  service.yaml
