[build-system]
requires = ["setuptools>=61,<69"]
build-backend = "setuptools.build_meta"

[project]
name = "gpuwatch"
version = "0.3.0"
description = "Lightweight NVIDIA GPU monitor — 20 notification channels (Slack, Discord, Telegram, ntfy, Teams, PagerDuty, Zulip, OpenClaw, and more), Prometheus/InfluxDB/Datadog metrics, crash/ECC detection, Kubernetes, GitHub Pages dashboard"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = [
    "gpu", "nvidia", "monitoring", "slack", "discord", "telegram",
    "prometheus", "pytorch", "deep-learning", "openclaw"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Monitoring",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = []

[project.scripts]
gpu-monitor = "gpu_monitor:main"

[project.urls]
Homepage = "https://github.com/reacher-z/gpu-monitor"
Repository = "https://github.com/reacher-z/gpu-monitor"
"Bug Tracker" = "https://github.com/reacher-z/gpu-monitor/issues"

[tool.setuptools]
py-modules = ["gpu_monitor"]
